--- a/bot/admin/web/src/app/bot/feature/application-feature.component.html
+++ b/bot/admin/web/src/app/bot/feature/application-feature.component.html
@@ -30,7 +30,7 @@
         nbTooltip="Refresh"
         (click)="refresh()"
       >
-        <i class="material-icons tock-toolbar-menu">refresh</i>
+        <nb-icon icon="refresh-outline"></nb-icon>
       </nb-action>
     </nb-actions>
   </nb-card-header>
