--- a/bot/admin/web/src/app/bot/feature/application-features-table.component.html
+++ b/bot/admin/web/src/app/bot/feature/application-features-table.component.html
@@ -32,7 +32,7 @@
         (click)="prepareCreate()"
         *ngIf="!create"
       >
-        <i class="material-icons tock-toolbar-menu">add_box</i>
+        <nb-icon icon="plus-square-outline"></nb-icon>
       </nb-action>
     </nb-actions>
   </nb-card-header>
