--- a/bot/admin/web/src/app/configuration/bot/new-bot.component.html
+++ b/bot/admin/web/src/app/configuration/bot/new-bot.component.html
@@ -77,7 +77,7 @@
                 <img
                   src="{{ channel.value.iconUrl() }}"
                   class="connector-icon"
-                  [matTooltip]="channel.value.label()"
+                  [nbTooltip]="channel.value.label()"
                 />
                 {{ channel.value.label() }}
               </span>
