--- a/bot/admin/web/src/app/theme/components/header/header.component.html
+++ b/bot/admin/web/src/app/theme/components/header/header.component.html
@@ -91,11 +91,7 @@
       (click)="auth.logout()"
       nbTooltip="Logout"
     >
-      <i
-        class="material-icons tock-toolbar-menu"
-        style="font-size: 30px"
-        >exit_to_app</i
-      >
+      <nb-icon icon="log-out-outline"></nb-icon>
     </nb-action>
   </nb-actions>
 </div>
