--- a/nlp/admin/web/src/app/intents/quality/intent-qa.component.html
+++ b/nlp/admin/web/src/app/intents/quality/intent-qa.component.html
@@ -32,7 +32,7 @@
         (click)="updateContent()"
         nbTooltip="Refresh"
       >
-        <mat-icon>refresh</mat-icon>
+        <nb-icon icon="refresh-outline"></nb-icon>
       </button>
     </span>
   </nb-card-body>
