--- a/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.scss
+++ b/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.scss
@@ -13,28 +13,31 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-.entity {
-  padding-top: 10px;
-  text-align: left;
+.tag {
+  display: inline-flex;
+  width: fit-content;
+  padding: 0.3rem 0.9rem;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  border-radius: 10rem;
+  background-color: var(--border-basic-color-3);
+  font-size: 0.9rem;
+  line-height: 1.25rem;
+  white-space: nowrap;
 }
 
-.role-container {
-  float: left;
-  padding-right: 15px;
+.error {
+  color: red;
 }
 
-.probability {
-  font-style: italic;
-  font-size: smaller;
-  padding-left: 10px;
+.content {
+  width: 50vw;
 }
 
-.value {
-  position: relative;
-  top: -4px;
+.footer {
+  text-align: right;
 }
 
-.read-only {
-  line-height: 36px;
+.submit-button {
+  margin-left: 20px;
 }
