--- a/bot/admin/web/src/app/analytics/users/users.component.css
+++ b/bot/admin/web/src/app/analytics/users/users.component.css
@@ -14,6 +14,18 @@
  * limitations under the License.
  */
 
+.tag {
+  display: inline-flex;
+  padding: 0rem 0.9rem;
+  margin-right: 2px;
+  margin-bottom: 2px;
+  border-radius: 10rem;
+  background-color: var(--border-basic-color-3);
+  font-size: 0.7rem;
+  line-height: 1.25rem;
+  white-space: nowrap;
+}
+
 .lastUpdateDate {
   font-style: italic;
 }
