--- a/nlp/admin/web/src/app/applications/application/application.component.scss
+++ b/nlp/admin/web/src/app/applications/application/application.component.scss
@@ -14,6 +14,40 @@
  * limitations under the License.
  */
 
+@import '@nebular/theme/styles/theming';
+@import '@nebular/theme/styles/themes';
+
+@include nb-install-component() {
+  .label {
+    &.required {
+      position: relative;
+
+      abbr {
+        position: absolute;
+        left: -0.8rem;
+        text-decoration: none;
+        color: nb-theme(color-danger-500);
+      }
+    }
+  }
+
+  .tag {
+    display: inline-flex;
+    width: fit-content;
+    max-width: 8rem;
+    padding: 0.3rem 1rem 0.3rem 1rem;
+    margin-right: 2px;
+    margin-bottom: 2px;
+    border-radius: 10rem;
+    color: white;
+    background-color: nb-theme(color-info-400);
+    font-size: 0.9rem;
+    line-height: 1.25rem;
+    white-space: nowrap;
+    cursor: pointer;
+  }
+}
+
 .locales {
   padding-left: 20px;
 }
